--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 ---
-title: Linear
+title: Teaching Resources
 layout: default
 ---
 <!-- Featured -->
 <div id="featured">
 	<div class="container">
 		<header>
-			<h2>Welcome to Linear</h2>
+			<h2>Learning materials for Geosciences</h2>
 		</header>
-		<p>This is <strong>Linear</strong>, a responsive HTML5 site template freebie by <a href="http://templated.co">TEMPLATED</a>. Released for free under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so use it for whatever (personal or commercial) &ndash; just give us credit! Check out more of our stuff at <a href="http://templated.co">our site</a> or follow us on <a href="http://twitter.com/templatedco">Twitter</a>.</p>
+		<p><strong>GeosLearn</strong>, is a teaching related website where you will find lectures & labs materials <br>
+			for some of the UoS I am teaching in the <a href="http://templated.co"><strong>School of Geosciences</strong></a> (USyd).</p>
 		<hr />
 		<div class="row">
 			<section class="4u">
