--- a/index.html
+++ b/index.html
@@ -8,27 +8,36 @@ layout: default
 		<header>
 			<h2>Learning materials for Geosciences</h2>
 		</header>
-		<p><strong>GeosLearn</strong>, is a teaching related website where you will find lectures & labs materials <br>
-			for some of the UoS I am teaching in the <a href="http://templated.co"><strong>School of Geosciences</strong></a> (USyd).</p>
+		<p><strong>GeosLearn</strong>, is a teaching related website where you will find lectures & labs materials
+			for some of the UoS I am involved in.</p>
 		<hr />
 		<div class="row">
+
 			<section class="4u">
-				<span class="pennant"><span class="fa fa-briefcase"></span></span>
-				<h3>Maecenas luctus lectus</h3>
-				<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
-				<a href="#" class="button button-style1">Read More</a>
+				<span class="pennant"><span class="fa fa-university"></span></span>
+				<h3>School of Geosciences</h3>
+				<p>The resources available here are primary intended for undergrads enrolled in a Senior Unit in Geology & Geophysics and/or Marine Science within
+					our <a href="http://www.geosci.usyd.edu.au/index.shtml">School</a>
+					here at <strong><a href="http://sydney.edu.au/science/index.shtml">The University of Sydney</a></strong>.</p>
+				<a href="http://www.geosci.usyd.edu.au/undergrad/ug_study.shtml" target="_blank" class="button button-style1">Read More</a>
 			</section>
+
 			<section class="4u">
-				<span class="pennant"><span class="fa fa-lock"></span></span>
-				<h3>Maecenas luctus lectus</h3>
-				<p>Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec magna.</p>
-				<a href="#" class="button button-style1">Read More</a>
+				<span class="pennant"><span class="fa fa-graduation-cap"></span></span>
+				<h3>Lectures</h3>
+				<p>My teaching focuses on various aspects of Surface and Marine processes modelling.
+					I use <strong><a href="http://github.com/hakimel/reveal.js">Reveal.js</a></strong> and <strong><a href="http://pages.github.com/">Github Pages</a></strong> to
+					create my presentations since my research projects are already up there.</p>
+				<a href="http://github.com/tristan-salles" target="_blank" class="button button-style1">Read More</a>
 			</section>
+
 			<section class="4u">
-				<span class="pennant"><span class="fa fa-globe"></span></span>
-				<h3>Maecenas luctus lectus</h3>
-				<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
-				<a href="#" class="button button-style1">Read More</a>
+				<span class="pennant"><span class="fa fa-trophy"></span></span>
+				<h3>Labs</h3>
+				<p>I have been using Jupyter Notebook for both Research & Teaching since 2014 and the labs materials are mostly based on this environment.
+					<strong><a href="https://jupyter.readthedocs.io/en/latest/tryjupyter.html#try-in-your-browser-no-installation-needed" target="_blank">Try using Jupyter Notebook</a></strong>,
+					and look at the Jupyter website for more details...</p>
+				<a href="https://jupyter.org/" target="_blank" class="button button-style1">Read More</a>
 			</section>
 
 		</div>
