--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
 
 			<section class="4u">
 				<span class="pennant"><span class="fa fa-university"></span></span>
-				<h3>School of Geosciences</h3>
+				<h3>School</h3>
 				<p>The resources available here are primary intended for undergrads enrolled in a Senior Unit in Geology & Geophysics and/or Marine Science within
 					our <a href="http://www.geosci.usyd.edu.au/index.shtml">School</a>
 					here at <strong><a href="http://sydney.edu.au/science/index.shtml">The University of Sydney</a></strong>.</p>
