--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 		<header>
 			<h2>Learning materials for Geosciences</h2>
 		</header>
-		<p><strong>GeosLearn</strong>, is a teaching related website where you will find lectures & labs materials
+		<p><strong>GeosLearn</strong> is a teaching related website where you will find lectures & labs materials
 			for some of the UoS I am involved in.</p>
 		<hr />
 		<div class="row">
@@ -50,16 +50,16 @@ layout: default
 
 			<div class="row">
 				<section class="6u">
-					<a href="#" class="image full"><img src="/assets/images/pic01.jpg" alt=""></a>
+					<a href="#" class="image full"><img src="/assets/images/pic1.jpg" alt=""></a>
 					<header>
-						<h2>Mauris vulputate dolor</h2>
+						<h2>Ocean data query</h2>
 					</header>
 					<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
 				</section>
 				<section class="6u">
-					<a href="#" class="image full"><img src="/assets/images/pic02.jpg" alt=""></a>
+					<a href="#" class="image full"><img src="/assets/images/pic4.jpg" alt=""></a>
 					<header>
-						<h2>Mauris vulputate dolor</h2>
+						<h2>Mapping for Geosciences</h2>
 					</header>
 					<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
 				</section>
@@ -67,16 +67,33 @@ layout: default
 
 			<div class="row">
 				<section class="6u">
-					<a href="#" class="image full"><img src="/assets/images/pic03.jpg" alt=""></a>
+					<a href="#" class="image full"><img src="/assets/images/pic2.jpg" alt=""></a>
 					<header>
-						<h2>Mauris vulputate dolor</h2>
+						<h2>Coastal evolution</h2>
 					</header>
 					<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
 				</section>
 				<section class="6u">
-					<a href="#" class="image full"><img src="/assets/images/pic04.jpg" alt=""></a>
+					<a href="#" class="image full"><img src="/assets/images/pic6.jpg" alt="Credit "></a>
 					<header>
-						<h2>Mauris vulputate dolor</h2>
+						<h2>Basins formation</h2>
+					</header>
+					<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
+				</section>
+			</div>
+
+			<div class="row">
+				<section class="6u">
+					<a href="#" class="image full"><img src="/assets/images/pic5.jpg" alt="Credit "></a>
+					<header>
+						<h2>Deltaic systems</h2>
+					</header>
+					<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
+				</section>
+				<section class="6u">
+					<a href="#" class="image full"><img src="/assets/images/pic3.jpg" alt="Credit "></a>
+					<header>
+						<h2>Tectonic geomorphology</h2>
 					</header>
 					<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
 				</section>
