update page title

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ layout: default
 				<section class="6u">
 					<a href="#" class="image full"><img src="/assets/images/pic6.jpg" alt="Credit "></a>
 					<header>
-						<h2>Basins formation</h2>
+						<h2>Basin formation</h2>
 					</header>
 					<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
 				</section>
