--- a/index.html
+++ b/index.html
@@ -50,11 +50,14 @@ layout: default
 
 			<div class="row">
 				<section class="6u">
-					<a href="#" class="image full"><img src="/assets/images/pic1.jpg" alt=""></a>
+					<a href="/blog/index.html" class="image full"><img src="/assets/images/pic1.jpg" alt=""></a>
 					<header>
 						<h2>Ocean data query</h2>
 					</header>
-					<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
+					<p>Ocean Data portals are routinely used by marine scientists to better understand the complexity of the Ocean and its interactions with
+						Climate and Life. Understanding how these data are stored and how to quickly extract particular informations from them is what you
+						will learn in this module!
+					</p>
 				</section>
 				<section class="6u">
 					<a href="#" class="image full"><img src="/assets/images/pic4.jpg" alt=""></a>
