--- a/index.html
+++ b/index.html
@@ -10,37 +10,6 @@ layout: default
 		</header>
 		<p><strong>GeosLearn</strong> is a teaching related website where you will find lectures & labs materials
 			for some of the UoS I am involved in.</p>
-		<hr />
-		<div class="row">
-
-			<section class="4u">
-				<span class="pennant"><span class="fa fa-university"></span></span>
-				<h3>School</h3>
-				<p>The resources available here are primary intended for undergrads enrolled in a Senior Unit in Geology & Geophysics and/or Marine Science within
-					our <a href="http://www.geosci.usyd.edu.au/index.shtml">School</a>
-					here at <strong><a href="http://sydney.edu.au/science/index.shtml">The University of Sydney</a></strong>.</p>
-				<a href="http://www.geosci.usyd.edu.au/undergrad/ug_study.shtml" target="_blank" class="button button-style1">Read More</a>
-			</section>
-
-			<section class="4u">
-				<span class="pennant"><span class="fa fa-graduation-cap"></span></span>
-				<h3>Lectures</h3>
-				<p>My teaching focuses on various aspects of Surface and Marine processes modelling.
-					I use <strong><a href="http://github.com/hakimel/reveal.js">Reveal.js</a></strong> and <strong><a href="http://pages.github.com/">Github Pages</a></strong> to
-					create my presentations since my research projects are already up there.</p>
-				<a href="http://github.com/tristan-salles" target="_blank" class="button button-style1">Read More</a>
-			</section>
-
-			<section class="4u">
-				<span class="pennant"><span class="fa fa-trophy"></span></span>
-				<h3>Labs</h3>
-				<p>I have been using Jupyter Notebook for both Research & Teaching since 2014 and the labs materials are mostly based on this environment.
-					<strong><a href="https://jupyter.readthedocs.io/en/latest/tryjupyter.html#try-in-your-browser-no-installation-needed" target="_blank">Try using Jupyter Notebook</a></strong>,
-					and look at the Jupyter website for more details...</p>
-				<a href="https://jupyter.org/" target="_blank" class="button button-style1">Read More</a>
-			</section>
-
-		</div>
 	</div>
 </div>
 
@@ -60,7 +29,7 @@ layout: default
 					</p>
 				</section>
 				<section class="6u">
-					<a href="#" class="image full"><img src="/assets/images/pic4.jpg" alt=""></a>
+					<a href="/blog/index.html" class="image full"><img src="/assets/images/pic4.jpg" alt=""></a>
 					<header>
 						<h2>Mapping for Geosciences</h2>
 					</header>
@@ -70,14 +39,14 @@ layout: default
 
 			<div class="row">
 				<section class="6u">
-					<a href="#" class="image full"><img src="/assets/images/pic2.jpg" alt=""></a>
+					<a href="/blog/index.html" class="image full"><img src="/assets/images/pic2.jpg" alt=""></a>
 					<header>
 						<h2>Coastal evolution</h2>
 					</header>
 					<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
 				</section>
 				<section class="6u">
-					<a href="#" class="image full"><img src="/assets/images/pic6.jpg" alt="Credit "></a>
+					<a href="/blog/index.html" class="image full"><img src="/assets/images/pic6.jpg" alt="Credit "></a>
 					<header>
 						<h2>Basin formation</h2>
 					</header>
@@ -87,20 +56,54 @@ layout: default
 
 			<div class="row">
 				<section class="6u">
-					<a href="#" class="image full"><img src="/assets/images/pic5.jpg" alt="Credit "></a>
+					<a href="/blog/index.html" class="image full"><img src="/assets/images/pic5.jpg" alt="Credit "></a>
 					<header>
 						<h2>Deltaic systems</h2>
 					</header>
 					<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
 				</section>
 				<section class="6u">
-					<a href="#" class="image full"><img src="/assets/images/pic3.jpg" alt="Credit "></a>
+					<a href="/blog/index.html" class="image full"><img src="/assets/images/pic3.jpg" alt="Credit "></a>
 					<header>
 						<h2>Tectonic geomorphology</h2>
 					</header>
-					<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
+					<p>Tectonic geomorphology is the study of the interplay between tectonic and surface processes that shape the landscape in regions of active
+						deformation and at time scales ranging from days to millions of years. Using <a href="https://github.com/badlands-model/pyBadlands/wiki">Badlands</a>,
+						we will make quantitative assessment of the impact of these tectonic forces on landscape and drainage evolution.</p>
 				</section>
 			</div>
 
+		</div>
+	</div>
+
+
+	<div id="featured">
+		<div class="container">
+			<div class="row">
+				<section class="4u">
+					<span class="pennant"><span class="fa fa-university"></span></span>
+					<h3>School</h3>
+					<p>The resources available here are primary intended for undergrads enrolled in a Senior Unit in Geology & Geophysics and/or Marine Science within
+						our <a href="http://www.geosci.usyd.edu.au/index.shtml">School</a>
+						here at <strong><a href="http://sydney.edu.au/science/index.shtml">The University of Sydney</a></strong>.</p>
+					<a href="http://www.geosci.usyd.edu.au/undergrad/ug_study.shtml" target="_blank" class="button button-style1">Read More</a>
+				</section>
+				<section class="4u">
+					<span class="pennant"><span class="fa fa-graduation-cap"></span></span>
+					<h3>Lectures</h3>
+					<p>My teaching focuses on various aspects of Surface and Marine processes modelling.
+						I use <strong><a href="http://github.com/hakimel/reveal.js">Reveal.js</a></strong> and <strong><a href="http://pages.github.com/">Github Pages</a></strong> to
+						create my presentations since my research projects are already up there.</p>
+					<a href="https://github.com/GeosLearn" target="_blank" class="button button-style1">Read More</a>
+				</section>
+				<section class="4u">
+					<span class="pennant"><span class="fa fa-trophy"></span></span>
+					<h3>Labs</h3>
+					<p>I have been using Jupyter Notebook for both Research & Teaching since 2014 and the labs materials are mostly based on this environment.
+						<strong><a href="https://jupyter.readthedocs.io/en/latest/tryjupyter.html#try-in-your-browser-no-installation-needed" target="_blank">Try using Jupyter Notebook</a></strong>,
+						and look at the Jupyter website for more details...</p>
+					<a href="https://jupyter.org/" target="_blank" class="button button-style1">Read More</a>
+				</section>
+			</div>
 		</div>
 	</div>
