--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@ layout: default
 				<section class="6u">
 					<a href="/blog/index.html" class="image full"><img src="/assets/images/pic4.jpg" alt=""></a>
 					<header>
-						<h2>Mapping for Geosciences</h2>
+						<h2>Mapping Resources</h2>
 					</header>
-					<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
+					<p>Mapping global distribution of mineral & oil resources and reserves are essential skills for geoscientists. Australia has an abundant and diverse range of energy resources.
+						Using open-source libraries, you will learn how to map some of Australian offshore resources with Jupyter notebooks.</p>
 				</section>
 			</div>
 
@@ -43,14 +44,17 @@ layout: default
 					<header>
 						<h2>Coastal evolution</h2>
 					</header>
-					<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
+					<p>This module focuses on medium to long-term coastal evolution. You will gain some understanding on how to set up and use numerical models for coastal projects.
+						In particular, you will simulate the impact of storms on 2D beach profiles, explore the sensitivities of crenulated bay to wave condition and
+						build models of longshore transport.</p>
 				</section>
 				<section class="6u">
 					<a href="/blog/index.html" class="image full"><img src="/assets/images/pic6.jpg" alt="Credit "></a>
 					<header>
 						<h2>Basin formation</h2>
 					</header>
-					<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
+					<p>Sedimentary basins are regions where considerable thicknesses of sediments have accumulated. Sedimentary basins are widespread both onshore and offshore.
+						In this module we will present some natural examples of basin formation and how they form.</p>
 				</section>
 			</div>
 
@@ -60,7 +64,9 @@ layout: default
 					<header>
 						<h2>Deltaic systems</h2>
 					</header>
-					<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
+					<p>Deltaic depositional facies result from interacting dynamics processes (wave energy, tidal regime, currents, climate, tectonic), which
+						modify and disperse fluvial clastic deposits. The complexity of environmental settings under which deltas exist results in a variety of vertical
+						sequences that can form within the delta facies. </p>
 				</section>
 				<section class="6u">
 					<a href="/blog/index.html" class="image full"><img src="/assets/images/pic3.jpg" alt="Credit "></a>
