--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@ layout: default
 						<h2>Basin formation</h2>
 					</header>
 					<p>Sedimentary basins are regions where considerable thicknesses of sediments have accumulated. Sedimentary basins are widespread both onshore and offshore.
-						In this module we will present some natural examples of basin formation and how they form.</p>
+						In this module, both qualitative and quantitative aspects of basin analysis
+						and sedimentary geology will be addressed.</p>
 				</section>
 			</div>
 
