--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ layout: default
 
 			<div class="row">
 				<section class="6u">
-					<a href="/blog/index.html" class="image full"><img src="/assets/images/pic2.jpg" alt=""></a>
+					<a href="/blog/index.html" class="image full"><img src="/assets/images/pic2.png" alt=""></a>
 					<header>
 						<h2>Coastal evolution</h2>
 					</header>
