--- a/LabDeploy.html
+++ b/LabDeploy.html
@@ -12,17 +12,129 @@ layout: default
 				<div id="content" class="8u skel-cell-important">
 				<section>
 					<header>
-						<h2>What is Jupyter?</h2>
+						<h2>Setting up the Lab's environment</h2>
 						<span class="byline">Web-based application for coding</span>
 					</header>
-					<p>The Jupyter Notebook App is a server-client application that allows editing and running notebook documents via a web browser. The Jupyter Notebook App can be
-						executed on a local desktop requiring no internet access or installed on a remote server and accessed through the internet.</p>
-					<p>TODO</p>
-				</section>
-			</div>
+					<p>The labs proposed in the different modules are based on <strong>Jupyter Notebook App</strong>. This server-client
+						application allows editing and running notebook documents via a web browser. It can be
+						executed on a local desktop requiring no internet access or installed on a remote
+						server and accessed through the internet.
+					</p>
+					<div class="col-md-6">
+				    <iframe style="width:100%; height:480px" src="https://jupyter-notebook-beginner-guide.readthedocs.io/en/latest/" frameborder="0" scrolling="yes" allowfullscreen>
+				    </iframe>
+				  </div>
+					<p><br/>Example of IPython interactive demo from <strong><a href="http://www.nature.com/news/ipython-interactive-demo-7.21492#" target="_blank">Nature Journal</a></strong><br/></p>
+					<!--div class="col-md-6">
+				    <iframe style="width:100%; height:580px" src="http://www.nature.com/news/ipython-interactive-demo-7.21492#" frameborder="0" scrolling="yes" allowfullscreen>
+				    </iframe>
+				  </div-->
+					<p>
+					Other live demo hosted by Rackspace on how to use Jupyter App can be found <strong><a href="https://try.jupyter.org" target="_blank">here</a></strong>.
+					</p>
 
-						</div>
+					<header>
+				    <span class="byline"><font color = "#000000">Local installation of Docker</font></span>
+				  </header>
+				  <p>To create the labs the following applications were used:<br/>
+						+ <strong>IPython Notebooks</strong> <br/>
+						+ <strong>Github</strong>: a hosting and versioning repository system <br/>
+						+ <strong>Docker</strong>: platform to build, ship, and run applications <br/>
+					</p>
+					<p><strong>If you want to build the environment and work on the labs on your own computer you will only
+						need to download the free <a href="http://www.docker.com/products/overview" target="_blank">Docker application</a>
+						by clicking on the link and choosing the right one for your operating system.</strong>
+					</p>
+					<div style="text-align: center;">
+					  <img src="{{ site.prefix }}/assets/images/docker.png" alt="download the Docker app" style="width:100%; height:100%" align="middle">
 					</div>
+
+					<header>
+				    <span class="byline"><font color = "#000000">Starting and setting up Docker</font></span>
+				  </header>
+					<p>Either you have just made a local installation of Docker or you are using the computers from the labs room, you will now need to
+						open Docker. On Windows go to "All programs" and search for Docker in the list. If you are using a Mac open the "Spotlight Search"
+						(arrow #1 in the figure below) and look for Docker (#2), open it (#3). Once Docker is open you will get the Docker App icon on the
+						right hand side of the top bar (#4). On Windows it will appear as other Programs and a list of onglets will be visible from the
+						main menu directly.
+					</p>
+					<div style="text-align: center;">
+					  <img src="{{ site.prefix }}/assets/images/dockermac.png" alt="open Docker app" style="width:50%; height:70%" align="middle">
+					</div>
+				  <p>It is possible to adjust the settings/preferences of Docker application by going in the "Preferences" menu (arrow #1 in the top figure).
+						On Mac, a window will pop-up and you can allocate the number of processors (arrow #2) and memory (#3) that will be use by the
+						software. This step is similar for Windows operating system.
+					</p>
+					<div style="text-align: center;">
+					  <img src="{{ site.prefix }}/assets/images/dockerpref.png" alt="setting Docker app" style="width:50%; height:30%" align="middle">
+					</div>
+				  <p>You are now ready to fire-up <strong>Kitematic</strong> (arrow #4 in the top figure).</p>
+
+					<header>
+						<span class="byline"><font color = "#000000">Kitematic</font></span>
+					</header>
+					<p>Using Docker App as shown above or by looking for it directly in "All Programs" on Windows machine, open Kitematic. <br/>
+						<strong><a href="https://www.docker.com/products/docker-kitematic" target="_blank">Kitematic</a></strong> is an open source project
+						built to simplify and streamline using Docker on a Mac or Windows PC. Kitematic automates the Docker installation
+						and setup process and provides an intuitive graphical user interface (GUI) for running Docker containers.<br/>
+						During the opening process the application might <strong>ask for a Docker Hub account and you will skip this step</strong> as it is not required
+						for our labs.<br\>
+						Once the initialisation process finishes (it could take several minutes the first time), a window will pop-up similar to the one below:
+					</p>
+					<div style="text-align: center;">
+						<img src="{{ site.prefix }}/assets/images/kitematic.png" alt="setting Docker app" style="width:90%; height:30%" align="middle">
+					</div>
+					<p>We will now start the Jupyter container containing the labs exercise by searching for the module name provided in the
+						labs materials. To do so search of this container as shown in the figure below and click on the create button (arrow #2).
+						When you will create the container for the first time, this operation will take several minutes.
+					</p>
+					<div style="text-align: center;">
+						<img src="{{ site.prefix }}/assets/images/kitematicmodule.png" alt="setting Docker app" style="width:90%; height:30%" align="middle">
+					</div>
+
+					<header>
+						<span class="byline"><font color = "#000000">Setting up the lab container</font></span>
+					</header>
+					<p>Either you have just made a local installation of Docker or you are using the computers from the labs room, you will now need to
+						open Docker.
+					</p>
+					<div style="text-align: center;">
+						<img src="{{ site.prefix }}/assets/images/volume.png" alt="open Docker app" style="width:90%; height:70%" align="middle">
+					</div>
+					<p>Either you have just made a local installation of Docker or you are using the computers from the labs room, you will now need to
+						open Docker.
+					</p>
+					<div style="text-align: center;">
+						<img src="{{ site.prefix }}/assets/images/volume2.png" alt="open Docker app" style="width:90%; height:70%" align="middle">
+					</div>
+					<p>Either you have just made a local installation of Docker or you are using the computers from the labs room, you will now need to
+						open Docker.
+					</p>
+					<div style="text-align: center;">
+						<img src="{{ site.prefix }}/assets/images/openlab.png" alt="open Docker app" style="width:90%; height:70%" align="middle">
+					</div>
+
+					<header>
+						<span class="byline"><font color = "#000000">Running lab's notebooks</font></span>
+					</header>
+					<p>Either you have just made a local installation of Docker or you are using the computers from the labs room, you will now need to
+						open Docker.
+					</p>
+					<div style="text-align: center;">
+						<img src="{{ site.prefix }}/assets/images/tree.png" alt="open Docker app" style="width:90%; height:70%" align="middle">
+					</div>
+					<p>Either you have just made a local installation of Docker or you are using the computers from the labs room, you will now need to
+						open Docker.
+					</p>
+					<div style="text-align: center;">
+						<img src="{{ site.prefix }}/assets/images/exnotebook.png" alt="open Docker app" style="width:90%; height:70%" align="middle">
+					</div>
+
+				</section>
+				</div>
+
+			</div>
+		</div>
 
 	</div>
 <!-- /Main -->
