update basin post

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ layout: default
 				<section class="4u">
 					<span class="pennant"><span class="fa fa-trophy"></span></span>
 					<h3>Labs</h3>
-					<p>I have been using Jupyter Notebook for both Research & Teaching since 2014 and the labs materials are mostly based on this environment.
+					<p>I use Jupyter Notebook for both Research & Teaching since 2014 and the labs materials are mostly based on this environment.
 						<strong><a href="https://jupyter.readthedocs.io/en/latest/tryjupyter.html#try-in-your-browser-no-installation-needed" target="_blank">Try using Jupyter Notebook</a></strong>,
 						and look at the Jupyter website for more details...</p>
 					<a href="https://jupyter.org/" target="_blank" class="button button-style1">Read More</a>
