--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@ layout: default
 					<header>
 						<h2>Badlands workshop</h2>
 					</header>
-					<p>Mapping global distribution of mineral & oil resources and reserves are essential skills for geoscientists. Australia has an abundant and diverse range of energy resources.
-						Using open-source libraries, you will learn how to map some of Australian offshore resources with Jupyter notebooks.</p>
+					<p>A 2 days workshop on surface processes modelling. This workshop aims to introduce those interested in landscape evolution and source to sink problems to a new open-
+						source code: <a href="https://github.com/badlands-model/pyBadlands/wiki">Badlands</a>. Note that you do not have to be a seasoned modeller to participate to the workshop!</p>
 				</section>
 			</div>
 
