add workshop page

--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="oceandata.html">Ocean Data</a></li>
+					<li><a href="sedbasin.html">Sedimentary basins</a></li>
+					<li><a href="delta.html">Deltaic systems</a></li>
+					<li><a href="coastevol.html">Coastal evolution</a></li>
+					<li><a href="tecgeo.html">Tectonic Geomorphology</a></li>
+					<li><a href="workshop.html">Badlands workshop</a></li>
 				</ul>
 			</nav>
 
@@ -132,7 +136,7 @@
 									</header>
 									<p> Access to quality data is essential to understand marine processes. Ocean Data portals are routinely used by Scientific organizations, Research agencies and the Industry to better understand the complexity of the Ocean and its interactions with Climate and Life. This module will give a quick introduction on accessing and analysing ocean data with python.</p>
 									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
+										<a href="oceandata.html" class="button alt">Learn More</a>
 									</footer>
 								</div>
 							</div>
@@ -150,7 +154,7 @@
 									</header>
 									<p> Sedimentary basins are regions where considerable thickness of sediments have accumulated. They are widespread both onshore and offshore. We will investigate how facies classification, wells analyses and decompaction techniques could be used to characterise their formation and evolution and infer from limited dataset their sedimentary characteristics.</p>
 									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
+										<a href="sedbasin.html" class="button alt">Learn More</a>
 									</footer>
 								</div>
 							</div>
@@ -166,9 +170,9 @@
 										<p>Sequence stratigraphy & shoreline trajectories</p>
 										<h2>Deltaic systems</h2>
 									</header>
-									<p> Deltaic depositional facies result from interacting dynamics processes which modify and disperse fluvial clastic deposits. The complexity of environmental settings under which deltas exist results in a variety of vertical sequences that can form within the delta facies. The aim of this module is to use a quantitative model to understand the main aspects of deltas formation.</p>
+									<p> Deltas result from interacting processes which modify and disperse fluvial clastic deposits. The complexity of environmental settings under which they form results in a variety of stratigraphic sequences. The aim of this module is to use <a href="https://github.com/badlands-model/pyBadlands">pyBadlands</a> to investigate sea-level and tectonic forcings on deltas evolution.</p>
 									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
+										<a href="delta.html" class="button alt">Learn More</a>
 									</footer>
 								</div>
 							</div>
@@ -182,11 +186,11 @@
 									<div class="content">
 										<header class="align-center">
 											<p>Sediment transport - Waves - Longshore drift</p>
-											<h2>Coastal evolution modelling</h2>
+											<h2>Coastal evolution</h2>
 										</header>
 										<p> We will build upon the theories that were developed during the first parts of your UoS using simple numerical models. In particular we will look at medium to long-term coastal processes evolution. The aim is to gain some understanding on how to set up and use numerical models for coastal projects as well as elaborate on the differences between these models.</p>
 										<footer class="align-center">
-											<a href="#" class="button alt">Learn More</a>
+											<a href="coastevol.html" class="button alt">Learn More</a>
 										</footer>
 									</div>
 								</div>
@@ -204,7 +208,7 @@
 									</header>
 									<p> We will study the interplay between tectonic and surface processes and how it shapes the landscape in regions of active deformation and at geological time scales. Using <a href="https://github.com/badlands-model/pyBadlands">pyBadlands</a>, we will make quantitative assessments of the impact of tectonic and climatic forces on landscape and drainage evolution in mountaineous terrain. </p>
 									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
+										<a href="tecgeo.html" class="button alt">Learn More</a>
 									</footer>
 								</div>
 							</div>
@@ -222,7 +226,7 @@
 									</header>
 									<p> This workshop aims to introduce those interested in landscape evolution and source to sink problems to the open-source code: <a href="https://github.com/badlands-model/pyBadlands">pyBadlands</a>. Note that you do not have to be a seasoned modeller to participate. Geomorphologists, tectonicists and sedimentologists interested in testing conceptual models based on field observations are welcome!</p>
 									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
+										<a href="workshop.html" class="button alt">Learn More</a>
 									</footer>
 								</div>
 							</div>
