add data query module

--- a/coastevol.html
+++ b/coastevol.html
@@ -29,6 +29,7 @@
 					<li><a href="coastevol.html">Coastal evolution</a></li>
 					<li><a href="tecgeo.html">Tectonic Geomorphology</a></li>
 					<li><a href="workshop.html">Badlands workshop</a></li>
+					<li><a href="LabDeploy.html">Lab deployment</a></li>
 				</ul>
 			</nav>
 
