--- a/workshop.html
+++ b/workshop.html
@@ -14,37 +14,37 @@
 	<body class="subpage">
 
 		<!-- Header -->
-			<header id="header">
-				<div class="logo"><a href="index.html">GeosLearn <span>by T. SALLES</span></a></div>
-				<a href="#menu">Menu</a>
-			</header>
+		<header id="header">
+			<div class="logo"><a href="index.html">GeosLearn <span>by T. SALLES</span></a></div>
+			<a href="#menu">Menu</a>
+		</header>
 
 		<!-- Nav -->
-			<nav id="menu">
-				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="oceandata.html">Ocean Data</a></li>
-					<li><a href="sedbasin.html">Sedimentary basins</a></li>
-					<li><a href="delta.html">Deltaic systems</a></li>
-					<li><a href="coastevol.html">Coastal evolution</a></li>
-					<li><a href="tecgeo.html">Tectonic Geomorphology</a></li>
-					<li><a href="workshop.html">Badlands workshop</a></li>
-				</ul>
-			</nav>
+		<nav id="menu">
+			<ul class="links">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="oceandata.html">Ocean Data</a></li>
+				<li><a href="sedbasin.html">Sedimentary basins</a></li>
+				<li><a href="delta.html">Deltaic systems</a></li>
+				<li><a href="coastevol.html">Coastal evolution</a></li>
+				<li><a href="tecgeo.html">Tectonic Geomorphology</a></li>
+				<li><a href="workshop.html">Badlands workshop</a></li>
+				<li><a href="LabDeploy.html">Lab deployment</a></li>
+			</ul>
+		</nav>
 
 		<!-- One -->
-			<section id="One" class="wrapper style3">
-				<div class="inner">
-					<header class="align-center">
-						<p>Basin and Landscape Dynamics</p>
-						<h2>Badlands workshop</h2>
-					</header>
-				</div>
-			</section>
+		<section id="One" class="wrapper style3">
+			<div class="inner">
+				<header class="align-center">
+					<p>Basin and Landscape Dynamics</p>
+					<h2>Badlands workshop</h2>
+				</header>
+			</div>
+		</section>
 
 		<!-- Main -->
-				</section>
-				  <div id="main" class="container">
+			<div id="main" class="container">
 				<!-- Elements -->
 					<!--h2 id="elements">Badlands workshop</h2-->
 					<div class="row 200%">
@@ -139,7 +139,7 @@
 
 							<!-- Buttons -->
 								<h3 id="resources">Resources</h3>
-					      <p>We will use <strong><a href="http://jupyter.org" target="_blank">Jupyter</a></strong>,  a web application that allows you to create and share documents that contain live code, equations, visualizations and explanatory text. To access the workshop materials we will download via Kitematic a  <strong><a href="https://www.docker.com/what-docker" target="_blank">Docker</a></strong> container called <strong><a href="https://hub.docker.com/r/badlandsmodel/pybadlands-demo/" target="_blank">pybadlands-demo</a></strong>. Please follow the documentation provided <strong><a href="{{ site.prefix }}/LabDeploy.html">here</a></strong> on how to install the materials on your local computer or directly from the School's computer labs.
+					      <p>We will use <strong><a href="http://jupyter.org" target="_blank">Jupyter</a></strong>,  a web application that allows you to create and share documents that contain live code, equations, visualizations and explanatory text. To access the workshop materials we will download via Kitematic a  <strong><a href="https://www.docker.com/what-docker" target="_blank">Docker</a></strong> container called <strong><a href="https://hub.docker.com/r/badlandsmodel/pybadlands-demo/" target="_blank">pybadlands-demo</a></strong>. Please follow the documentation provided <strong><a href="LabDeploy.html">here</a></strong> on how to install the materials on your local computer or directly from the School's computer labs.
 					      </p>
 
 								<p>Some notes on how to use <b>Badlands</b> via <b>Docker</b>, setup initial models and run examples is available through the following links:
