--- a/oceandata.html
+++ b/oceandata.html
@@ -147,13 +147,13 @@
 
 					<p><strong><a href="https://portal.aodn.org.au" target="_blank">Australian marine and climate science data</a></strong></p>
 					<div class="col-md-6">
-						<iframe style="width:100%; height:500px" src="http://oceancurrent.imos.org.au" frameborder="0" scrolling="yes" allowfullscreen>
+						<iframe style="width:100%; height:500px" src="https://portal.aodn.org.au" frameborder="0" scrolling="yes" allowfullscreen>
 						</iframe>
 					</div>
 
 					<p><a href="https://github.com/aodn/imos-user-code-library/wiki/Using-the-IMOS-User-Code-Library-with-Python" target="_blank">Using the IMOS User Code Library with Python</a></p>
 
-					<!--div class="col-md-6">
+					<!--div class="col-md-6">http://oceancurrent.imos.org.au
 						<iframe style="width:100%; height:500px" src="http://github.com/aodn/imos-user-code-library/wiki/Using-the-IMOS-User-Code-Library-with-Python" frameborder="0" scrolling="yes" allowfullscreen>
 						</iframe>
 					</div-->
