add delta module

--- a/sedbasin.html
+++ b/sedbasin.html
@@ -45,11 +45,15 @@
 
 		<!-- Main -->
 			<div id="main" class="container">
+				<div class="row 200%">
+					<div class="6u 12u$(medium)">
+						<p><sub> Total Sediment Thickness of the World's Oceans and Marginal Seas (<a href="https://www.ngdc.noaa.gov/mgg/sedthick/index.html" target="_blank">Whittaker  et al. 2013</a>)</sub></p>
+						<span class="image fit"><img src="images/sedthick.png" alt="" /></span>
 
-				<!-- Elements -->
-					<h2 id="elements">Elements</h2>
-					<div class="row 200%">
-						<div class="6u 12u$(medium)">
+						<p>Sedimentary basins are regions where considerable thickness of sediments have accumulated. They are widespread both onshore and offshore.
+						<br/>
+						In this module, we will investigate how facies classification, wells analyses and decompaction techniques could be used to characterise their formation and evolution and infer from limited dataset their sedimentary characteristics.
+						</p>
 
 							<!-- Text stuff -->
 								<h3>Text</h3>
