--- a/index.html
+++ b/index.html
@@ -233,6 +233,25 @@
 							</div>
 						</div>
 
+						<div>
+							<div class="box">
+								<div class="image fit">
+									<img src="images/pic08.jpg" alt="" />
+								</div>
+								<div class="content">
+									<header class="align-center">
+										<p>Vertical Coralgal Growth</p>
+										<h2>pyReef-Core</h2>
+									</header>
+									<p> Using <a href="https://github.com/pyReef-model/pyReefCore">pyReef-Core</a> we will model the stratigraphic development of coral reefs in geologic time under environmental forcing conditions including accommodation, oceanic variability, sediment input and tectonics. The tool can quantitatively test carbonate platform evolution and efficiently interpret vertical growth and karstification patterns observed in drill cores.
+									</p>
+									<footer class="align-center">
+										<a href="pyreefcore.html" class="button alt">Learn More</a>
+									</footer>
+								</div>
+							</div>
+						</div>
+
 					</div>
 				</div>
 			</section>
